# fast_io

./: .clang-format  .gitignore  CMakeLists.txt
bench/: CMakeLists.txt
bench/10m_usize/: cpp_fstream.cpp  cstd_cstdio.cpp  fast_io_cfile.cpp  fast_io_cfile_unlocked.cpp  fast_io_filebuf.cpp  fast_io_iobuf.cpp  fast_io_iobuf_mutex.cpp  fmt_output_file.cpp  fmt_print.cpp  rust.rs  sanity_check.cpp  timer.hpp
benchmarks/: CMakeLists.txt
benchmarks/0000.10m_size_t/: CMakeLists.txt
benchmarks/0000.10m_size_t/legacy/: CMakeLists.txt
benchmarks/0000.10m_size_t/random/: CMakeLists.txt
benchmarks/0000.10m_size_t/raw/: CMakeLists.txt
benchmarks/0000.10m_size_t/strings/: CMakeLists.txt
benchmarks/0000.10m_size_t/unit/: CMakeLists.txt
benchmarks/0000.10m_size_t/with_crypto/: CMakeLists.txt
benchmarks/0001.10m_double/: CMakeLists.txt
benchmarks/0001.10m_double/charconv/: CMakeLists.txt
benchmarks/0001.10m_double/fixed/: CMakeLists.txt
benchmarks/0001.10m_double/fixed_precision/: CMakeLists.txt
benchmarks/0001.10m_double/general/: CMakeLists.txt
benchmarks/0001.10m_double/scientific/: CMakeLists.txt
benchmarks/0001.10m_double/scientific_precision/: CMakeLists.txt
benchmarks/0001.10m_double/unit/: CMakeLists.txt
benchmarks/0001.10m_double/very_long/: CMakeLists.txt
benchmarks/0001.10m_double/very_long_repeat/: CMakeLists.txt
benchmarks/0001.10m_double/very_long_simple/: CMakeLists.txt
benchmarks/0001.10m_double/with_crypto/: CMakeLists.txt
benchmarks/0002.transmit/: CMakeLists.txt
benchmarks/0003.async_tcp_echo_server/: CMakeLists.txt
benchmarks/0003.async_tcp_echo_server/multiprocess_proxy/: CMakeLists.txt
benchmarks/0004.benchmark_provides_by_other_people/: CMakeLists.txt
benchmarks/0004.benchmark_provides_by_other_people/cpp_io_bench/: CMakeLists.txt
benchmarks/0005.standardlibrary_bench/: CMakeLists.txt
benchmarks/0006.exception_vs_syscall/: CMakeLists.txt
benchmarks/0007.isspace/: CMakeLists.txt
benchmarks/0008.width/: CMakeLists.txt
benchmarks/0009.fill_nc/: CMakeLists.txt
benchmarks/0010.floating_details/: CMakeLists.txt
benchmarks/0011.10m_float/: CMakeLists.txt
benchmarks/0012.10m_(u)int128_t/: CMakeLists.txt
benchmarks/0013.10m_long_double/: CMakeLists.txt
benchmarks/0014.raw_performance/: CMakeLists.txt
benchmarks/0015.fast_io_vs_fmt/: CMakeLists.txt
benchmarks/0016.binary_size/: CMakeLists.txt
benchmarks/0017.information_message/: CMakeLists.txt
benchmarks/0018.concat/: CMakeLists.txt
benchmarks/0019.text/: CMakeLists.txt
benchmarks/0020.utf/: CMakeLists.txt
benchmarks/0021.iconv/: CMakeLists.txt
benchmarks/0022.rust_vs_fast_io/: CMakeLists.txt
benchmarks/0023.constant/: CMakeLists.txt
benchmarks/0024.pointer_value/: CMakeLists.txt
example/: CMakeLists.txt  charview.cpp  hw.cpp
examples/: CMakeLists.txt
examples/0000.compile/: CMakeLists.txt
examples/0001.helloworld/: CMakeLists.txt
examples/0002.a+b/: CMakeLists.txt
examples/0003.floating_point/: CMakeLists.txt
examples/0004.string/: CMakeLists.txt
examples/0005.file_io/: CMakeLists.txt
examples/0006.datetime/: CMakeLists.txt
examples/0007.legacy/: CMakeLists.txt
examples/0008.dns/: CMakeLists.txt
examples/0009.transmit/: CMakeLists.txt
examples/0010.http/: CMakeLists.txt
examples/0011.black_hole/: CMakeLists.txt
examples/0012.debug/: CMakeLists.txt
examples/0013.tcp/: CMakeLists.txt
examples/0014.epoll/: CMakeLists.txt
examples/0015.udp/: CMakeLists.txt
examples/0016.process/: CMakeLists.txt
examples/0017.tcp_multiprocess_async/: CMakeLists.txt
examples/0018.tcp_thread_pool/: CMakeLists.txt
examples/0019.win32/: CMakeLists.txt
examples/0020.third_party/: CMakeLists.txt
examples/0021.igenerator/: CMakeLists.txt
examples/0022.utf/: CMakeLists.txt
examples/0023.bound/: CMakeLists.txt
examples/0024.locale/: CMakeLists.txt
examples/0025.sound/: CMakeLists.txt
examples/0026.custom_device/: CMakeLists.txt
examples/0027.width/: CMakeLists.txt
examples/0028.openssl/: CMakeLists.txt
examples/0029.io_file/: CMakeLists.txt
examples/0030.c_interface/: CMakeLists.txt
examples/0031.win32_memory/: CMakeLists.txt
examples/0032.win32_internet/: CMakeLists.txt
examples/0033.win32_iocp/: CMakeLists.txt
examples/0034.asio/: CMakeLists.txt
examples/0035.fast_io_error/: CMakeLists.txt
examples/0036.int128/: CMakeLists.txt
examples/0037.long_double/: CMakeLists.txt
examples/0038.boost_iostreams/: CMakeLists.txt
examples/0039.filebuf_file/: CMakeLists.txt
examples/0040.eof/: CMakeLists.txt
examples/0041.transaction/: CMakeLists.txt
examples/0042.text/: CMakeLists.txt
examples/0043.iconv/: CMakeLists.txt
examples/0044.sha/: CMakeLists.txt
examples/0045.iterator/: CMakeLists.txt
examples/0046.zlib/: CMakeLists.txt
examples/0047.jenkins_hash/: CMakeLists.txt
examples/0048.crc/: CMakeLists.txt
examples/0049.md5/: CMakeLists.txt
examples/0050.gcm/: CMakeLists.txt
examples/0051.io_files/: CMakeLists.txt
examples/0052.print_reserver/: CMakeLists.txt
examples/0053.cryptopp/: CMakeLists.txt
examples/0054.scatter_print/: CMakeLists.txt
testsuites/: CMakeLists.txt
testsuites/0000.transforms/: CMakeLists.txt
testsuites/0001.forbid_uflow/: CMakeLists.txt
testsuites/0002.crypto/: CMakeLists.txt
testsuites/0003.hash/: CMakeLists.txt
testsuites/0004.TOCTOU/: CMakeLists.txt
testsuites/0005.freestanding/: CMakeLists.txt
testsuites/0006.memory_map/: CMakeLists.txt
testsuites/0007.round_trip/: CMakeLists.txt
testsuites/0008.hack/: CMakeLists.txt
testsuites/0009.wchar/: CMakeLists.txt
testsuites/0010.string/: CMakeLists.txt
testsuites/0011.binary_size/: CMakeLists.txt
testsuites/0012.security/: CMakeLists.txt
testsuites/0013.internal_temporary_buffer/: CMakeLists.txt
testsuites/0014.width/: CMakeLists.txt
testsuites/0015.interpositioning/: CMakeLists.txt
testsuites/0016.floating/: CMakeLists.txt
testsuites/0017.integer/: CMakeLists.txt
testsuites/0018.utf8/: CMakeLists.txt
testsuites/0019.crtp/: CMakeLists.txt
(+37 files in other folders)
