set(current_dir 0001.10m_double)

set(CMAKE_FOLDER "${CMAKE_FOLDER}/${current_dir}")

add_subdirectory(charconv)
add_subdirectory(fixed)
add_subdirectory(fixed_precision)
add_subdirectory(general)
add_subdirectory(scientific)
add_subdirectory(scientific_precision)
add_subdirectory(unit)
add_subdirectory(very_long)
add_subdirectory(very_long_repeat)
add_subdirectory(very_long_simple)
add_subdirectory(with_crypto)

benchmark_target(${current_dir} fast_io_vs_fmt)
benchmark_target(${current_dir} grisu_exact_vs_ryu)
benchmark_target(${current_dir} grisu_exact_vs_ryu_newstring)
benchmark_target(${current_dir} grisu_exact_vs_ryu_string)
benchmark_target(${current_dir} input_10M_double)
benchmark_target(${current_dir} input_10M_double_charconv)
benchmark_target(${current_dir} no_teststd_output_10M_double)
benchmark_target(${current_dir} no_teststd_output_10M_double_no_neg)
benchmark_target(${current_dir} output_10M_double)
benchmark_target(${current_dir} output_10M_double_scientific)
